# data-fetcher

./: .gitignore  .gitmodules  README.md  meson.build
doc/: use_case.wsd
include/: data_fetcher.h  df_rdma.h  global.h  rdma.h
src/: df_client.c  df_common.c  df_rdma.c  df_server.c  df_shm.c  df_shm.h
src/channel/: rdma.c
test/: df_client_test.c  df_server_test.c  meson.build  test_global.h
